--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -4,6 +4,7 @@ colorama==0.3.9
 dj-database-url==0.4.2
 dj-static==0.0.6
 Django==1.11.7
+gunicorn==19.7.1
 isort==4.2.15
 lazy-object-proxy==1.3.1
 mccabe==0.6.1
