--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,18 @@
--r requirements-dev.txt
-psycopg2
+astroid==1.5.3
+autopep8==1.3.3
+colorama==0.3.9
+dj-database-url==0.4.2
+dj-static==0.0.6
+Django==1.11.7
+gunicorn==19.7.1
+isort==4.2.15
+lazy-object-proxy==1.3.1
+mccabe==0.6.1
+mysqlclient==1.3.12
+pycodestyle==2.3.1
+pylint==1.7.4
+python-decouple==3.1
+pytz==2017.3
+six==1.11.0
+static3==0.7.0
+wrapt==1.10.11
